compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/ExpectObject.kt
// p.B

package p

expect object B